--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "canvas-confetti": "^1.2.0",
     "uuid": "^9.0.0"
   },
@@ -16,6 +17,7 @@
     "@types/snowpack-env": "^2.3.3",
     "@types/uuid": "^9.0.1",
     "prettier": "^2.2.1",
+    "sass": "^1.58.3",
     "snowpack": "^3.8.8",
     "typescript": "^4.2.4"
   }
